# driver-companion

./: BUILD_INSTRUCTIONS.md  CMakeLists.txt  LICENSE  README.md  U8G2_TO_LVGL_GUIDE.md  lv_conf.h  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  arrow_renderer.cpp  arrow_renderer.h  ble_server.cpp  ble_server.h  display_manager.cpp  display_manager.h  emotion_engine.cpp  emotion_engine.h  face_renderer.cpp  face_renderer.cpp.new  face_renderer.h  hardware_config.cpp  hardware_config.h  i2c_scanner.cpp  idf_component.yml  main.cpp  mpu6050_sensor.cpp  mpu6050_sensor.h  ota_updater.cpp  ota_updater.h  secure_storage.cpp  secure_storage.h  ssd1306_idf.c  ssd1306_idf.h  state_manager.cpp  state_manager.h  wifi_manager.cpp  wifi_manager.h
